fixed fb page alignment

--- a/style.css
+++ b/style.css
@@ -699,13 +699,18 @@ Updates
   justify-content: center;
   align-items: center;
   margin: 4.8rem;
+  margin-bottom: 16px;
 }
 
-.fb-page {
+#updates {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  margin: 4.8rem;
+}
+
+.fb--wrapper {
+  width: 100%;
+  margin-left: calc((100% - 300px) / 2);
 }
 
 .updates__heading {
